tests/prsl/fixtures/invalid/no-record-keyword.prsl
begin-record
foo not-a-record {
  content : "x";
}
end-record
---
